--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </header>
     <main>
       <section>
-        <img src="images/portrait.png" alt="Photo of Laneia">
+        <img src="images/portrait.PNG" alt="Photo of Laneia">
         <h1>Laneia Murray</h1>
-        <h2>Aspiring Software Engineer</h2>
+        <h2>Aspiring Full-stack Software Developer</h2>
         <a href="https://www.linkedin.com/in/laneia"> <i class="fab fa-linkedin"></i> Linkedin</a>
         <a href="https://www.instagram.com/jesuislaneia/" ><i class="fab fa-instagram"></i> Instagram</a>
         <a href="https://github.com/laneia"><i class="fab fa-github"></i> Github</a>
