--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <main>
       <section>
-        <img src="images/octocat.PNG" alt="Photo of Laneia">
+        <img src="images/portrait.png" alt="Photo of Laneia">
         <h1>Laneia Murray</h1>
         <h2>Aspiring Full-stack Software Developer</h2>
         <a href="https://www.linkedin.com/in/laneia"> <i class="fab fa-linkedin"></i> Linkedin</a>
