update photo file path

--- a/journal.html
+++ b/journal.html
@@ -43,7 +43,7 @@
 
          <div class="images">
           <img src="images/bold-logo.png" alt="Be Bold">
-          <img src="images/be-bold.JPG" alt="Ada at Be Bold">
+          <img src="/images/be-bold.jpg" alt="Ada at Be Bold">
          </div>
       </article>
     </main>
