word blog -> journal

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="portfolio.html">Portfolio</a>
               </li>
               <li>
-                <a href="journal.html">Blog</a>
+                <a href="journal.html">Journal</a>
               </li>
               <li>
                 <a href="about.html">About</a>
