--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
     </nav>
     <main>
-        <img class="center" src="images/portrait.png" alt="Laneia">
+        <img class="center" src="/images/portrait.png" alt="Laneia">
         <div class="name">
             <h1>Laneia Murray</h1>
             <h2>Aspiring Full-stack Software Developer</h2>
