--- a/journal.html
+++ b/journal.html
@@ -37,7 +37,7 @@
         <p>Ada gave out several tickets - and it turned out to be pretty inspirational!</p>
         <p>(And not just for the food!)</p>
         <div>
-            <img class="journalimg2" src="images/be-bold.JPG" alt="Ada at Be Bold">
+            <img class="journalimg2" src="/images/be-bold.jpg" alt="Ada at Be Bold">
         </div> 
         <div>
                 <ul>
